[gd_scene load_steps=4 format=2]

[ext_resource path="res://res/Gui/square.png" type="Texture" id=1]
[ext_resource path="res://Gui/ActionsPanel/ActionButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Gui/ActionsPanel/ActionsPanel.gd" type="Script" id=3]

[node name="ActionsPanel" type="Control"]
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -52.0
margin_right = 192.0
margin_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 80, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="NinePatchRect" parent="Margin"]
margin_right = 384.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButtons" type="HBoxContainer" parent="Margin"]
margin_left = 169.0
margin_top = 7.0
margin_right = 214.0
margin_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButton" parent="Margin/ActionButtons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 45.0
margin_bottom = 45.0
size_flags_horizontal = 0
size_flags_vertical = 4
